Add meta tags gem

--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,3 +1,7 @@
+<% title "Placeholder Title" %>
+<% description "Placeholder description." %>
+<% keywords "Placeholder keywords" %>
+
 <div class="col-md-8 col-md-offset-2">
   <h1>New Todo Task</h1>
   <%= render "form" %>
