--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,8 @@
-<% @tasks.each do |task|%>
+<% title "Placeholder Title" %>
+<% description "Placeholder description." %>
+<% keywords "Placeholder keywords" %>
+
+<% @tasks.each do |task| %>
   <h2><%= link_to task.title, task %></h2>
   <p><%= task.description %></p>
   <p>Created <%= time_ago_in_words(task.created_at) %> ago</p>
