--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,3 +1,7 @@
+<% title "Placeholder Title" %>
+<% description "Placeholder description." %>
+<% keywords "Placeholder keywords" %>
+
 <div class="col-md-10 col-md-offset-1">
   <h2><%= @task.title %></h2>
   <p><%= @task.description %></p>
