--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -6,6 +6,8 @@
   <h2><%= @task.title %></h2>
   <p><%= @task.description %></p>
   <div class="col-md-4 col-md-offset-4">
-    <%= link_to 'Back', root_path%>
+    <%= link_to 'Back', root_path %>
+    <%= link_to 'Edit', edit_task_path(@task) %>
+    <%= link_to 'Delete', task_path(@task), method: :delete, data: { confirm: "Are you sure?" }  %>
   </div>
 </div>
