Add styling and completed function to index page

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,11 +4,49 @@
 
 
 <% if user_signed_in? %>
-  <% @tasks.each do |task| %>
-    <h2><%= link_to task.title, task %></h2>
-    <p><%= task.description %></p>
-    <p>Created <%= time_ago_in_words(task.created_at) %> ago</p>
-  <% end %>
+  <div class="col-md-10 col-md-offset-1">
+    <% @tasks.each do |task| %>
+      <div class="index-wrapper">
+        <% if task.completed? %>
+          <div class="row item">
+            <div class="col-md-2">
+              <p><%= link_to complete_task_path(task), method: :patch do %></p>
+                    <i class="fa fa-check fa-lg"></i>
+                 <% end %>
+            </div>
+            <div class="col-md-2">
+              <p><%= link_to task, method: :delete, data: {confirm: "Are you sure?"} do %></p>
+                    <i class="fa fa-trash fa-lg"></i>
+                <% end %>
+            </div>
+            <div class="col-md-8">
+              <h2 style="opacity: 0.5;" class="item-title"><strike><%= link_to task.title, task %></strike></h2>
+              <p style="opacity: 0.5;" class="item-sub-title item-desc"><%= task.description %></p>
+              <p style="opacity: 0.5;" class="time-created-at item-sub-title">Completed <%= time_ago_in_words(task.completed_at) %> ago</p>
+            </div>
+          </div>
+        <% else %>
+          <div class="row item">
+            <div class="col-md-2">
+              <p><%= link_to complete_task_path(task), method: :patch do %></p>
+                    <i class="fa fa-check fa-lg"></i>
+                 <% end %>
+            </div>
+            <div class="col-md-8">
+              <h2 class="item-title"><%= link_to task.title, task %></h2>
+              <p class="item-sub-title item-desc"><%= task.description %></p>
+              <p style="opacity: 0.5;" class="time-created-at item-sub-title">Created <%= time_ago_in_words(task.created_at) %> ago</p>
+            </div>
+            <div class="col-md-2">
+              <p><%= link_to task, method: :delete, data: {confirm: "Are you sure?"} do %></p>
+                    <i class="fa fa-trash fa-lg"></i>
+                <% end %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
 <% else %>
-  <%= render "welcome_page" %>
+  <%= render 'welcome_page' %>
 <% end %>
